<resources>
    <string name="app_name">GetherFit</string>
    <string name="app_name_alias">KLVAD</string>
    <string name="placeholder">Placeholder</string>
    <string name="number">42</string>

    <!-- Content descriptions -->
    <string name="description_settings">Settings</string>
    <string name="description_logout">Logout</string>
    <string name="description_camera">Camera</string>
    <string name="description_gallery">Gallery</string>
    <string name="description_trashcan">Trashcan</string>
    <string name="description_edit">Edit</string>
    <string name="description_share">Share</string>
    <string name="description_dashboard">Dashboard</string>

    <!-- The image bottom sheet -->
    <string name="bottom_image_title">Add Image</string>
    <string name="bottom_image_camera">From Camera</string>
    <string name="bottom_image_gallery">From Gallery</string>
    <string name="bottom_image_delete">Delete Image</string>
    <string name="bottom_image_delete_image">Delete Current Image</string>
    <string name="bottom_image_gallery_error">Could not access the image!</string>

    <!-- The confirm dialog -->
    <string name="confirm_confirm">Confirm</string>
    <string name="confirm_cancel">Cancel</string>

    <!-- The login screen -->
    <string name="login_description">Everything is better together!</string>
    <string name="login_failed">Log in failed! Try again!</string>
    <string name="login_logout">User logged out!</string>

    <!-- The main screen -->
    <string name="main_home">Home</string>
    <string name="main_space_add">Add Space</string>

    <!-- The edit space screen -->
    <string name="edit_space">Add Space</string>
    <string name="edit_space_modify">Modify Space</string>
    <string name="edit_space_confirm">Confirm</string>
    <string name="edit_space_delete">Delete</string>
    <string name="edit_space_delete_description">Are you sure you want to delete this space?</string>
    <string name="edit_space_leave">Leave</string>
    <string name="edit_space_leave_description">Are you sure you want to leave this space?</string>
    <string name="edit_space_name">Name</string>
    <string name="edit_space_name_hint">The Space Name</string>
    <string name="edit_space_name_error">Please provide a name!</string>

    <!-- The overview fragment -->
    <string name="overview">Overview</string>
    <string name="overview_sessions">Sessions</string>
    <string name="overview_exercises">Exercises</string>
    <string name="overview_workouts">Workouts Per Week</string>
    <string name="overview_muscles">Trained Muscle Groups</string>

    <!-- The routines fragment -->
    <string name="routines">Routines</string>

    <!-- The training fragment -->
    <string name="training">Training</string>

    <!-- The recipes fragment -->
    <string name="recipes">Recipes</string>

    <!-- The events fragment -->
    <string name="events">Events</string>

    <!-- The settings screen -->
    <string name="settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_description">Are you sure you want to log out?</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_bottom_bar">Bottom Bar Navigation</string>
    <string name="settings_bottom_bar_description">Show the bottom bar navigation</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_description">Change the application\'s theme</string>
    <string name="settings_theme_normal">Normal</string>
    <string name="settings_theme_klvad">KLVAD</string>
    <string name="settings_personal">Personal View</string>
    <string name="settings_personal_overview">Personal Overview</string>
    <string name="settings_personal_overview_description">Also reflect training data of all spaces in the personal overview</string>
</resources>