<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logo"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/description_settings"
            android:onClick="closeSettings"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_appearance"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <de.progresstinators.getherfit.shared.DescriptionItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:description="@string/settings_bottom_bar_description"
                app:text="@string/settings_bottom_bar">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_bottom_bar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </de.progresstinators.getherfit.shared.DescriptionItem>

            <de.progresstinators.getherfit.shared.DescriptionItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:description="@string/settings_theme_description"
                app:text="@string/settings_theme" />

            <LinearLayout
                android:id="@+id/theme_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal">

                <de.progresstinators.getherfit.shared.ImageButton
                    android:id="@+id/button_normal_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showNormalTheme"
                    app:highlightBackground="@drawable/rounded_background_primary"
                    app:logo="@drawable/theme_normal"
                    app:title="@string/settings_theme_normal" />

                <de.progresstinators.getherfit.shared.ImageButton
                    android:id="@+id/button_klvad_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showKLVADTheme"
                    app:highlightBackground="@drawable/rounded_background_primary"
                    app:logo="@drawable/theme_klvad"
                    app:title="@string/settings_theme_klvad" />
            </LinearLayout>


            <View
                style="@style/horizontal_divider"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/theme_selection" />

            <TextView
                android:id="@+id/personal"
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_personal"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <de.progresstinators.getherfit.shared.DescriptionItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    app:description="@string/settings_personal_overview_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:text="@string/settings_personal_overview" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_personal_overview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>