<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/description_settings"
            android:onClick="closeSettings"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_account"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    style="@style/profile_picture"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/person"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/description_edit"
                    android:onClick="modifyImage"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:layout_constraintLeft_toLeftOf="@id/user_image"
                    app:layout_constraintTop_toTopOf="@id/user_image" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/user_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.progresstinators.getherfit.shared.components.DescriptionItem
                        android:id="@+id/credentials"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:description_text="@string/placeholder"
                        app:description_title="@string/placeholder" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="144dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_button"
                        android:drawableStart="@drawable/ic_baseline_login_24"
                        android:onClick="logOut"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/settings_logout"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                style="@style/horizontal_divider"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/theme_selection" />

            <TextView
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_appearance"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.progresstinators.getherfit.shared.components.DescriptionItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="64dp"
                    app:description_text="@string/settings_bottom_bar_description"
                    app:description_title="@string/settings_bottom_bar" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_bottom_bar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <de.progresstinators.getherfit.shared.components.DescriptionItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:description_text="@string/settings_theme_description"
                app:description_title="@string/settings_theme" />

            <LinearLayout
                android:id="@+id/theme_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personal">

                <de.progresstinators.getherfit.shared.components.ImageButton
                    android:id="@+id/button_normal_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showNormalTheme"
                    app:image_button_background="@drawable/rounded_background_primary"
                    app:image_button_logo="@drawable/theme_normal"
                    app:image_button_title="@string/settings_theme_normal" />

                <de.progresstinators.getherfit.shared.components.ImageButton
                    android:id="@+id/button_klvad_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showKLVADTheme"
                    app:image_button_background="@drawable/rounded_background_primary"
                    app:image_button_logo="@drawable/theme_klvad"
                    app:image_button_title="@string/settings_theme_klvad" />
            </LinearLayout>


            <View
                style="@style/horizontal_divider"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/theme_selection" />

            <TextView
                android:id="@+id/personal"
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/settings_personal"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <de.progresstinators.getherfit.shared.components.DescriptionItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    app:description_text="@string/settings_personal_overview_description"
                    app:description_title="@string/settings_personal_overview"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_personal_overview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>