<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".space.EditSpaceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/edit_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/description_settings"
            android:onClick="close"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/appearance_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/space_image"
                    style="@style/profile_picture"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:src="@drawable/space"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/description_edit"
                    android:onClick="modifyImage"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:layout_constraintLeft_toLeftOf="@id/space_image"
                    app:layout_constraintTop_toTopOf="@id/space_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_space_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                style="@style/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    style="@style/text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/edit_space_name_hint"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/leave_button"
                    android:layout_width="144dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button_error"
                    android:drawableStart="@drawable/ic_baseline_login_24"
                    android:onClick="leaveSpace"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/edit_space_leave"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete_button"
                    android:layout_width="144dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button_error"
                    android:drawableStart="@drawable/ic_baseline_delete_24"
                    android:onClick="deleteSpace"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/edit_space_delete"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="144dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_button"
                    android:drawableStart="@drawable/ic_baseline_edit_24"
                    android:onClick="apply"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/edit_space_confirm"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>